# pytut

./: hello.py  pyproject.toml
lessons/01-basics/: lesson01.py
lessons/basics/: lesson01.py
