[project]
name = "pytut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.ruff]
line-length = 50

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-line-length = 20